@@ -16,7 +16,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -31,7 +30,7 @@ public class OrderDetailServiceImpl implements OrderDetailService {
     @Override
     public List<OrderDetailDto> getAllOrderDetailDto() {
         return orderDetailRepository.findAll()
-                .stream().map(OrderDetailMapper::toOrderDetailDto).collect(Collectors.toList());
+                .stream().map(v -> mapper.map(v, OrderDetailDto.class)).toList();
     }
 
     @Override
@@ -47,16 +46,14 @@ public class OrderDetailServiceImpl implements OrderDetailService {
 
     @Override
     public List<OrderDetailDto> getAllByOrderId(Integer id) {
-        // return orderDetailRepository.findAllByOrderId(id)
-        //         .stream().map(OrderDetailMapper::toOrderDetailDto).collect(Collectors.toList());
-        return null;
+        return orderDetailRepository.findAllByOrderId(id)
+                .stream().map(v -> mapper.map(v, OrderDetailDto.class)).toList();
     }
 
     @Override
     public List<OrderDetailDto> getAllByProductId(Integer id) {
-        // return orderDetailRepository.findAllByProductId(id)
-        //         .stream().map(OrderDetailMapper::toOrderDetailDto).collect(Collectors.toList());
-        return null;
+        return orderDetailRepository.findAllByProductId(id)
+                .stream().map(v -> mapper.map(v, OrderDetailDto.class)).toList();
     }
 
     @Override
